k8s/client-web/client-web.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-web
  labels:
    app: client-web
spec:
  type: ClusterIP
  selector:
    app: client-web
  ports:
    - name: http
      port: 8081
      targetPort: http
