k8s/client-web/client-web.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opswarden-self-hosted-web
spec:
  ingressClassName: traefik
  rules:
    - host: app.opswarden.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-web
                port:
                  name: http
